--- a/angular_app/angular_partials/form.html
+++ b/angular_app/angular_partials/form.html
@@ -19,7 +19,7 @@
 
 		<div class="row form-group">
 			<div class="col-sm-6">
-				<button type="submit" class="btn btn-lg btn-success" ng-click="insert_doc(document)" ng-disabled="doc_insert_form.$invalid || doc_insert_form.$pristine">Cadastrar</button>
+				<button type="submit" class="btn btn-lg btn-success" ng-click="insert_doc()" ng-disabled="doc_insert_form.$invalid || doc_insert_form.$pristine">Cadastrar</button>
 			</div>
 		</div>
 	</form>
