--- a/angular_app/angular_partials/table.html
+++ b/angular_app/angular_partials/table.html
@@ -22,7 +22,7 @@
 		<tbody>
 			<tr ng-repeat="doc in docs | filter:filter | orderBy:selected_order">
 				<td>
-					<button class="btn btn-primary" ng-disabled="checked == $index" ng-click="change_index($index)">Atualizar</button>
+					<button class="btn btn-primary" ng-disabled="checked == $index" ng-click="change_index($index)">Alterar</button>
 				</td>
 				<td>
 					<div ng-bind="doc.attribute_1" ng-hide="checked == $index"></div>
